Fix button visible while widget closed (in Firefox)
Since a recent new version of Firefox, some of widget's content elements
are visible, while the widget is closed, due to a CSS selector being
prioritized differently now.

This adds an additional selector to prevent overriding attributes when
the widget content area is hidden.

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -37,7 +37,7 @@
   max-height: 0px;
 }
 
-.rs-box.rs-selected {
+.rs-box.rs-selected:not([aria-hidden=true]) {
   opacity: 1;
   max-height: 420px;
 }
